--- a/client/main.styl
+++ b/client/main.styl
@@ -6,7 +6,7 @@
 @import 's-grid-classes'
 
 html, body, p, h1, h2, h3, h4, h5, h6
-    font-family 'Raleway' sans-serif
+    font-family 'Raleway', sans-serif
 
 .back-to-top-btn
     background #e6e6e6
